frontend/src/app/globals.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

:root {
  --background: oklch(0.9914 0.0098 87.4695);
  --foreground: oklch(0.3296 0.0122 62.2125);
  --card: oklch(0.9688 0.0119 79.7848);
  --card-foreground: oklch(0.3296 0.0122 62.2125);
  --popover: oklch(0.9914 0.0098 87.4695);
  --popover-foreground: oklch(0.3296 0.0122 62.2125);
  --primary: oklch(0.5954 0.084 143.4195);
  --primary-foreground: oklch(1 0 0);
  --secondary: oklch(0.7063 0.0564 227.2095);
  --secondary-foreground: oklch(1 0 0);
  --muted: oklch(0.9365 0.0206 81.7807);
  --muted-foreground: oklch(0.5579 0.0208 70.0358);
  --accent: oklch(0.883 0.0596 64.4503);
  --accent-foreground: oklch(0.4168 0.0436 68.8424);
  --destructive: oklch(0.652 0.1363 29.5653);
  --destructive-foreground: oklch(1 0 0);
  --border: oklch(0.907 0.0212 79.0883);
  --input: oklch(0.9483 0.0177 81.3313);
  --ring: oklch(0.5954 0.084 143.4195);
  --chart-1: oklch(0.5954 0.084 143.4195);
  --chart-2: oklch(0.7063 0.0564 227.2095);
  --chart-3: oklch(0.8052 0.1329 78.1498);
  --chart-4: oklch(0.652 0.1363 29.5653);
  --chart-5: oklch(0.6684 0.0684 316.8892);
  --sidebar: oklch(0.9579 0.0153 77.0712);
  --sidebar-foreground: oklch(0.3296 0.0122 62.2125);
  --sidebar-primary: oklch(0.5954 0.084 143.4195);
  --sidebar-primary-foreground: oklch(1 0 0);
  --sidebar-accent: oklch(0.9255 0.024 79.7388);
  --sidebar-accent-foreground: oklch(0.3296 0.0122 62.2125);
  --sidebar-border: oklch(0.907 0.0212 79.0883);
  --sidebar-ring: oklch(0.5954 0.084 143.4195);
  --font-sans: "Quicksand", system-ui, sans-serif;
  --font-serif: "Lora", Georgia, serif;
  --font-mono: "Fira Code", monospace;
  --radius: 1rem;
  --shadow-x: 0px;
  --shadow-y: 4px;
  --shadow-blur: 12px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.08;
  --shadow-color: #3a342f;
  --shadow-2xs: 0px 4px 12px 0px hsl(27.2727 10.4762% 20.5882% / 0.04);
  --shadow-xs: 0px 4px 12px 0px hsl(27.2727 10.4762% 20.5882% / 0.04);
  --shadow-sm:
    0px 4px 12px 0px hsl(27.2727 10.4762% 20.5882% / 0.08), 0px 1px 2px -1px
    hsl(27.2727 10.4762% 20.5882% / 0.08);
  --shadow:
    0px 4px 12px 0px hsl(27.2727 10.4762% 20.5882% / 0.08), 0px 1px 2px -1px
    hsl(27.2727 10.4762% 20.5882% / 0.08);
  --shadow-md:
    0px 4px 12px 0px hsl(27.2727 10.4762% 20.5882% / 0.08), 0px 2px 4px -1px
    hsl(27.2727 10.4762% 20.5882% / 0.08);
  --shadow-lg:
    0px 4px 12px 0px hsl(27.2727 10.4762% 20.5882% / 0.08), 0px 4px 6px -1px
    hsl(27.2727 10.4762% 20.5882% / 0.08);
  --shadow-xl:
    0px 4px 12px 0px hsl(27.2727 10.4762% 20.5882% / 0.08), 0px 8px 10px -1px
    hsl(27.2727 10.4762% 20.5882% / 0.08);
  --shadow-2xl: 0px 4px 12px 0px hsl(27.2727 10.4762% 20.5882% / 0.2);
  --tracking-normal: 0.01em;
  --spacing: 0.25rem;
}

.dark {
  --background: oklch(0.2225 0.0041 84.5879);
  --foreground: oklch(0.9428 0.0153 77.0696);
  --card: oklch(0.2617 0.0047 67.6183);
  --card-foreground: oklch(0.9428 0.0153 77.0696);
  --popover: oklch(0.2225 0.0041 84.5879);
  --popover-foreground: oklch(0.9428 0.0153 77.0696);
  --primary: oklch(0.7298 0.0667 143.5089);
  --primary-foreground: oklch(0.2225 0.0041 84.5879);
  --secondary: oklch(0.7803 0.043 215.544);
  --secondary-foreground: oklch(0.2225 0.0041 84.5879);
  --muted: oklch(0.3109 0.0082 75.2711);
  --muted-foreground: oklch(0.7002 0.0201 75.2529);
  --accent: oklch(0.3983 0.0175 74.1664);
  --accent-foreground: oklch(0.9428 0.0153 77.0696);
  --destructive: oklch(0.5175 0.1062 29.4814);
  --destructive-foreground: oklch(1 0 0);
  --border: oklch(0.3469 0.0102 73.5699);
  --input: oklch(0.2749 0.007 67.5293);
  --ring: oklch(0.7298 0.0667 143.5089);
  --chart-1: oklch(0.7298 0.0667 143.5089);
  --chart-2: oklch(0.7803 0.043 215.544);
  --chart-3: oklch(0.7507 0.1295 79.8494);
  --chart-4: oklch(0.5175 0.1062 29.4814);
  --chart-5: oklch(0.5849 0.0683 312.9161);
  --sidebar: oklch(0.1965 0.0026 67.6778);
  --sidebar-foreground: oklch(0.9428 0.0153 77.0696);
  --sidebar-primary: oklch(0.7298 0.0667 143.5089);
  --sidebar-primary-foreground: oklch(0.2225 0.0041 84.5879);
  --sidebar-accent: oklch(0.2617 0.0047 67.6183);
  --sidebar-accent-foreground: oklch(0.9428 0.0153 77.0696);
  --sidebar-border: oklch(0.3469 0.0102 73.5699);
  --sidebar-ring: oklch(0.7298 0.0667 143.5089);
  --font-sans: "Quicksand", system-ui, sans-serif;
  --font-serif: "Lora", Georgia, serif;
  --font-mono: Special Elite, ui-serif, serif;
  --radius: 1rem;
  --shadow-x: 0px;
  --shadow-y: 8px;
  --shadow-blur: 20px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.4;
  --shadow-color: #000000;
  --shadow-2xs: 0px 8px 20px 0px hsl(0 0% 0% / 0.2);
  --shadow-xs: 0px 8px 20px 0px hsl(0 0% 0% / 0.2);
  --shadow-sm:
    0px 8px 20px 0px hsl(0 0% 0% / 0.4), 0px 1px 2px -1px hsl(0 0% 0% / 0.4);
  --shadow:
    0px 8px 20px 0px hsl(0 0% 0% / 0.4), 0px 1px 2px -1px hsl(0 0% 0% / 0.4);
  --shadow-md:
    0px 8px 20px 0px hsl(0 0% 0% / 0.4), 0px 2px 4px -1px hsl(0 0% 0% / 0.4);
  --shadow-lg:
    0px 8px 20px 0px hsl(0 0% 0% / 0.4), 0px 4px 6px -1px hsl(0 0% 0% / 0.4);
  --shadow-xl:
    0px 8px 20px 0px hsl(0 0% 0% / 0.4), 0px 8px 10px -1px hsl(0 0% 0% / 0.4);
  --shadow-2xl: 0px 8px 20px 0px hsl(0 0% 0% / 1);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);

  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
  --tracking-normal: var(--tracking-normal);
  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
}

body {
  background-color: var(--background);
  color: var(--foreground);
  letter-spacing: var(--tracking-normal);
}

